Scrollbar fixed in User Plots Div

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -7,6 +7,5 @@
   background-color: $dark-green;
   position: fixed;
   height: 100%;
-  overflow: auto;
   z-index: 1;
 }
