--- a/src/components/Sidebar/UserPlotsSideBar/UserPlotsSideBar.module.scss
+++ b/src/components/Sidebar/UserPlotsSideBar/UserPlotsSideBar.module.scss
@@ -2,7 +2,6 @@
 
 .Sidebar {
   width: 12em;
-  overflow: hidden;
   height: 100%;
 }
 
@@ -50,8 +49,18 @@
 }
 
 .PlotsDiv {
-  height: max-content;
+  height: calc(100% - 190px);
   overflow-y: scroll;
+}
+
+.PlotsDiv::-webkit-scrollbar {
+  width: 6px;
+}
+
+.PlotsDiv::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  background-color: $yellow;
 }
 
 .InputElementSearchBar:focus {
